# parsel

./: :w  Cargo.toml  README.md  install.sh
.github/workflows/: main.yml  release.yml
src/: main.rs
src/http/: mod.rs
src/types/: app.rs  input_handler.rs  mod.rs
src/ui/: keyboard.rs  mod.rs  renderer.rs  types.rs
src/ui/layout/: mod.rs
src/ui/sections/: method.rs  mod.rs  query_params.rs  request_body.rs  request_headers.rs  response_body.rs  response_headers.rs  status_bar.rs  url_bar.rs
