[package]
name = "parsel"
version = "0.5.0"
edition = "2024"

[dependencies]
curl-rest = "0.4"
ratatui = "0.30.0"
serde_json = "1.0.149"
tui-input = "0.15.0"
once_cell = "1.21.3"
tree-sitter = "0.26.5"
tree-sitter-highlight = "0.26.5"
tree-sitter-html = "0.23.2"
tree-sitter-json = "0.24.8"
url = "2.5.8"
