[package]
name = "parsel"
version = "0.7.1"
edition = "2024"

[dependencies]
curl-rest = "0.5"
ratatui = "0.30.0"
serde_json = "1.0.149"
tui-input = "0.15.3"
once_cell = "1.21.4"
tree-sitter = "0.26.8"
tree-sitter-highlight = "0.26.8"
tree-sitter-html = "0.23.2"
tree-sitter-json = "0.24.8"
url = "2.5.8"
