[package]
name = "parsel"
version = "0.7.1"
edition = "2024"

[dependencies]
curl-rest = "0.5"
ratatui = { version = "0.30.0", features = ["serde"] }
serde_json = "1.0.149"
tui-input = "0.15.3"
once_cell = "1.21.4"
tree-sitter-highlight = "0.26.8"
tree-sitter-html = "0.23.2"
tree-sitter-json = "0.24.8"
url = "2.5.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
